<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Performance Analyzer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="History">History</string>
    <string name="Next">Next</string>
    <string name="Monitor">Monitor</string>
    <string name="CheckErrors">Check Errors</string>
    <string name="rpms">RPMS</string>
    <string name="mph">MPH</string>
    <string name="Back">Back</string>
    <string name="Run">Run</string>
    <string name="Run1">Run1: 9/12/13: 13.00</string>
    <string name="Run2">Run2: 10/1/13: 15.00</string>
    <string name="pRuns">Past Runs</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="DTC1">Error#1</string>
    <string name="DTC2">Error#2</string>
    <string name="DTC3">Error#3</string>
    <string name="Clear">Clear</string>
    <string name="clearAll">Clear all DTC Error Codes?</string>
    <string name="voltage">Battery Voltage</string>
    <string name="tirePressure">Tire Pressure</string>
    <string name="oilPressure">Oil Pressure</string>

    <string-array name="Make">
        <item>Ford</item>
        <item>Toyota</item>
        <item>Honda</item>
    </string-array>
    <string-array name="Model">
        <item>Mustang</item>
        <item>F150</item>
        <item>350-Z</item>
    </string-array>
    <string-array name="Year">
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
    </string-array>

    <string name="title_activity_display_mode">DisplayModeActivity</string>
    <string name="title_activity_run">Run</string>
    <string name="title_activity_check_error">CheckError</string>
    <string name="title_activity_clear_code">ClearCode</string>
    <string name="title_activity_history">History</string>

</resources>
